# django-query-optimizer

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  GitVersion.yml  Makefile  README.md  cliff.toml  docker-compose.yml  pyproject.toml  sonar-project.properties
.claude/: settings.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: action-check.yml  auto-update-pre-commit.yml  ci.yml  dependabot-auto-merge.yml  quality-gate-check.yml  release.yml  secret-scan.yml  sonar.yml
examples/demo/: README.md  db.sqlite3  manage.py  pytest.ini
examples/demo/catalog/: admin.py  apps.py  models.py  views.py
examples/demo/catalog/management/commands/: seed_demo.py
examples/demo/catalog/migrations/: 0001_initial.py
examples/demo/demo_project/: settings.py  urls.py
examples/demo/tests/: test_query_budget.py
legal/: cgu.md  mentions-legales.md
src/django_query_optimizer/: __init__.py  apps.py  py.typed  store.py
src/django_query_optimizer/_internal/: __init__.py  bootstrap.py  version.py
src/django_query_optimizer/admin/: __init__.py
src/django_query_optimizer/analyzers/: query_analyzer.py
src/django_query_optimizer/collectors/: query_collector.py
src/django_query_optimizer/detectors/: __init__.py  base.py  drf_serializer.py  n_plus_one.py  select_related.py
src/django_query_optimizer/middleware/: __init__.py  query_collector_middleware.py
src/django_query_optimizer/migrations/: 0001_initial.py
src/django_query_optimizer/recommendations/: base.py
src/django_query_optimizer/regression/: __init__.py  detector.py
src/django_query_optimizer/reporting/: __init__.py  sarif.py
src/django_query_optimizer/scoring/: __init__.py  query_scorer.py
src/django_query_optimizer/templates/django_query_optimizer/admin/: change_list.html
src/django_query_optimizer/testing/: pytest_plugin.py
tests/: conftest.py  settings.py  settings_mypy.py
tests/integration/: test_packaging.py
tests/unit/: test_admin.py  test_drf_serializer_detector.py  test_init.py  test_middleware.py  test_n_plus_one_detector.py  test_pytest_plugin.py  test_query_analyzer.py  test_query_collector.py  test_query_scorer.py  test_recommendations.py  test_regression_detector.py  test_sarif_reporter.py  test_select_related_detector.py  test_store.py
