[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-query-optimizer"
version = "0.1.0"
description = "Intelligent ORM analysis and optimization platform for Django"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [{ name = "chrysa", email = "greau.anthony+chrysa@gmail.com" }]
keywords = [
    "django",
    "orm",
    "performance",
    "query",
    "optimization",
    "n+1",
    "sql",
    "profiling",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Database",
]

dependencies = ["django>=4.2"]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
drf = ["djangorestframework>=3.14"]
realtime = ["channels>=4.0", "daphne>=4.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-django>=4.8",
    "ruff>=0.9",
    "mypy>=1.10",
    "django-stubs>=5.0",
    "djangorestframework-stubs>=3.14",
    "factory-boy>=3.3",
]

[project.entry-points."pytest11"]
query_optimizer = "django_query_optimizer.testing.pytest_plugin"

[project.urls]
Homepage = "https://github.com/chrysa/django-query-optimizer"
Repository = "https://github.com/chrysa/django-query-optimizer"
Issues = "https://github.com/chrysa/django-query-optimizer/issues"
Changelog = "https://github.com/chrysa/django-query-optimizer/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "tests.settings"
addopts = "--cov=django_query_optimizer --cov-report=xml --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["django_query_optimizer"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]
exclude = ["^tests/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "ANN",
    "S",
    "B",
    "A",
    "C4",
    "DTZ",
    "T20",
    "RET",
    "SIM",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]
"src/django_query_optimizer/testing/pytest_plugin.py" = ["ANN401"]
