[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-query-optimizer"
version = "0.1.0"
description = "Intelligent ORM analysis and optimization platform for Django"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [{ name = "chrysa", email = "greau.anthony+chrysa@gmail.com" }]
keywords = [
    "django",
    "orm",
    "performance",
    "query",
    "optimization",
    "n+1",
    "sql",
    "profiling",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Database",
]

dependencies = ["django>=4.2"]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
drf = ["djangorestframework>=3.14"]
realtime = ["channels>=4.0", "daphne>=4.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-django>=4.8",
    "ruff>=0.9",
    "mypy>=1.10",
    "django-stubs>=5.0",
    "djangorestframework-stubs>=3.14",
    "factory-boy>=3.3",
]

[project.entry-points."pytest11"]
query_optimizer = "django_query_optimizer.testing.pytest_plugin"

[project.urls]
Homepage = "https://github.com/chrysa/django-query-optimizer"
Repository = "https://github.com/chrysa/django-query-optimizer"
Issues = "https://github.com/chrysa/django-query-optimizer/issues"
Changelog = "https://github.com/chrysa/django-query-optimizer/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship non-Python data files in the wheel/sdist. setuptools defaults to .py only,
# which silently drops the admin template (TemplateDoesNotExist on install) and
# the PEP 561 marker. setuptools>=70 (pinned in build-system) supports ** globs.
django_query_optimizer = ["py.typed", "templates/**/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "tests.settings"
addopts = "-v"

[tool.coverage.run]
source = ["django_query_optimizer"]
branch = true
relative_files = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]
exclude = ["^tests/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
# HttpRequest does not declare dynamic attributes; query_collector is set at runtime
module = ["django_query_optimizer.middleware.query_collector_middleware"]
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
# Django admin typing is incomplete: ModelAdmin has no generic params (type-arg)
# and each_context/TemplateResponse use object instead of HttpRequest (arg-type)
module = ["django_query_optimizer.admin"]
disable_error_code = ["type-arg", "arg-type"]

[tool.django-stubs]
django_settings_module = "tests.settings_mypy"

[tool.ruff]
line-length = 120
# py313 (not py314): ruff format <=0.15.15 strips multi-except parens under py314 — restore when fixed upstream
target-version = "py313"
# Demo projects under examples/ are illustrative Django apps, not library code.
extend-exclude = ["examples"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "ANN",
    "S",
    "B",
    "A",
    "C4",
    "DTZ",
    "T20",
    "RET",
    "SIM",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]
"src/django_query_optimizer/testing/pytest_plugin.py" = ["ANN401"]
